Add data objects to 'CinematicaDinamicaMecanismos'

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Asesor Inteligente es una herramienta que le permite al alumno desarrollar habilidades para resolver problemas complejos en ingeniería."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,7 +27,7 @@
     <title>NOVUS Asesor Inteligente</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Asesor Inteligente es una herramienta que le permite al alumno desarrollar habilidades para resolver problemas complejos en ingeniería.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
